<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constr_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_root_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_root_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_root_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_normal" />

        <ImageView
            android:id="@+id/image_movie_logo"
            style="@style/Widget.AAG2020.ImageView.MovieLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_movie_logo" />

        <View
            android:id="@+id/image_movie_logo_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/image_movie_logo_mask"
            app:layout_constraintBottom_toBottomOf="@id/image_movie_logo"
            app:layout_constraintEnd_toEndOf="@id/image_movie_logo"
            app:layout_constraintStart_toStartOf="@id/image_movie_logo"
            app:layout_constraintTop_toTopOf="@id/image_movie_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_back"
            style="@style/Widget.AAG2020.TextView.MovieBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_back_margin_top"
            android:text="@string/movie_back_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieBack"
            app:layout_constraintStart_toStartOf="@id/guideline_root_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_movie_rating_system"
            style="@style/Widget.AAG2020.TextView.MovieRatingSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/movie_age_rating"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieRatingSystem"
            app:layout_constraintBottom_toTopOf="@id/text_movie_name"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_name"
            style="@style/Widget.AAG2020.TextView.MovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_name_msg"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieName"
            app:layout_constraintBottom_toBottomOf="@id/image_movie_logo"
            app:layout_constraintEnd_toStartOf="@id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/image_movie_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_tags"
            style="@style/Widget.AAG2020.TextView.MovieTagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:text="@string/movie_tags_msg"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieTagLine"
            app:layout_constraintEnd_toStartOf="@id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/text_movie_name" />

        <ImageView
            android:id="@+id/image_star_first"
            style="@style/Widget.AAG2020.ImageView.IconStar.RadicalRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintEnd_toStartOf="@id/image_star_second"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/text_movie_tags"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star_second"
            style="@style/Widget.AAG2020.ImageView.IconStar.RadicalRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintEnd_toStartOf="@id/image_star_third"
            app:layout_constraintStart_toEndOf="@id/image_star_first"
            app:layout_constraintTop_toBottomOf="@id/text_movie_tags"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star_third"
            style="@style/Widget.AAG2020.ImageView.IconStar.RadicalRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintEnd_toStartOf="@id/image_star_fourth"
            app:layout_constraintStart_toEndOf="@id/image_star_second"
            app:layout_constraintTop_toBottomOf="@id/text_movie_tags"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star_fourth"
            style="@style/Widget.AAG2020.ImageView.IconStar.RadicalRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintEnd_toStartOf="@id/image_star_fifth"
            app:layout_constraintStart_toEndOf="@id/image_star_third"
            app:layout_constraintTop_toBottomOf="@id/text_movie_tags"
            app:srcCompat="@drawable/ic_star" />

        <ImageView
            android:id="@+id/image_star_fifth"
            style="@style/Widget.AAG2020.ImageView.IconStar.StormGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintStart_toEndOf="@id/image_star_fourth"
            app:layout_constraintTop_toBottomOf="@id/text_movie_tags"
            app:srcCompat="@drawable/ic_star" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_reviews"
            style="@style/Widget.AAG2020.TextView.MovieReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/movie_reviews_msg"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieReviews"
            app:layout_constraintBottom_toBottomOf="@id/image_star_first"
            app:layout_constraintStart_toEndOf="@id/image_star_fifth"
            app:layout_constraintTop_toTopOf="@id/image_star_first" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_storyline"
            style="@style/Widget.AAG2020.TextView.MovieStoryline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/movie_storyline_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieStoryline"
            app:layout_constraintEnd_toStartOf="@id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/text_movie_reviews" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_storyline_content"
            style="@style/Widget.AAG2020.TextView.MovieStorylineContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:text="@string/movie_storyline_msg"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieStorylineContent"
            app:layout_constraintEnd_toStartOf="@id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/text_movie_storyline" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_movie_cast"
            style="@style/Widget.AAG2020.TextView.MovieCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/movie_cast_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.MovieCast"
            app:layout_constraintEnd_toStartOf="@id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/text_movie_storyline_content" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_actor_photo_first"
            style="@style/Widget.AAG2020.ImageView.Actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/image_actor_photo_second"
            app:layout_constraintStart_toEndOf="@id/guideline_root_left"
            app:layout_constraintTop_toBottomOf="@id/text_movie_cast"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.AAG2020.ImageView.Actor"
            app:srcCompat="@drawable/image_actor_robert_downey_jr" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_actor_photo_second"
            style="@style/Widget.AAG2020.ImageView.Actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/image_actor_photo_third"
            app:layout_constraintStart_toEndOf="@id/image_actor_photo_first"
            app:layout_constraintTop_toBottomOf="@id/text_movie_cast"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.AAG2020.ImageView.Actor"
            app:srcCompat="@drawable/image_actor_chris_evans" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_actor_photo_third"
            style="@style/Widget.AAG2020.ImageView.Actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/image_actor_photo_fourth"
            app:layout_constraintStart_toEndOf="@id/image_actor_photo_second"
            app:layout_constraintTop_toBottomOf="@id/text_movie_cast"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.AAG2020.ImageView.Actor"
            app:srcCompat="@drawable/image_actor_mark_ruffalo" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_actor_photo_fourth"
            style="@style/Widget.AAG2020.ImageView.Actor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@null"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline_root_right"
            app:layout_constraintStart_toEndOf="@id/image_actor_photo_third"
            app:layout_constraintTop_toBottomOf="@id/text_movie_cast"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.AAG2020.ImageView.Actor"
            app:srcCompat="@drawable/image_actor_chris_hemsworth" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_actor_name_first"
            style="@style/Widget.AAG2020.TextView.ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/actor_robert_downey_jr_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.ActorName"
            app:layout_constraintBottom_toBottomOf="@id/guideline_root_bottom"
            app:layout_constraintEnd_toEndOf="@id/image_actor_photo_first"
            app:layout_constraintStart_toStartOf="@id/image_actor_photo_first"
            app:layout_constraintTop_toBottomOf="@id/image_actor_photo_first" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_actor_name_second"
            style="@style/Widget.AAG2020.TextView.ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_chris_evan_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.ActorName"
            app:layout_constraintBaseline_toBaselineOf="@id/text_actor_name_first"
            app:layout_constraintEnd_toEndOf="@id/image_actor_photo_second"
            app:layout_constraintStart_toStartOf="@id/image_actor_photo_second" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_actor_name_third"
            style="@style/Widget.AAG2020.TextView.ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_mark_ruffalo_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.ActorName"
            app:layout_constraintBaseline_toBaselineOf="@id/text_actor_name_first"
            app:layout_constraintEnd_toEndOf="@id/image_actor_photo_third"
            app:layout_constraintStart_toStartOf="@id/image_actor_photo_third" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_actor_name_fourth"
            style="@style/Widget.AAG2020.TextView.ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_chris_hemsworth_title"
            android:textAppearance="@style/TextAppearance.AAG2020.TextView.ActorName"
            app:layout_constraintBaseline_toBaselineOf="@id/text_actor_name_first"
            app:layout_constraintEnd_toEndOf="@id/image_actor_photo_fourth"
            app:layout_constraintStart_toStartOf="@id/image_actor_photo_fourth" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>